Added Pop up registration

--- a/css/style.css
+++ b/css/style.css
@@ -1633,6 +1633,52 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
+
+
+
+/*--------------------------------------------------------------
+# pop up css
+--------------------------------------------------------------*/
+
+
+
+/* Popup Modal Styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: linear-gradient(to bottom right, #1b1618a2, #ff30ac88);
+}
+
+.modal-content {
+  background-color: #d5326ed2;
+  margin: 15% auto;
+  padding: 20px;
+  border: 5px solid rgba(247, 109, 173, 0.454)4;
+  width: 80%;
+  box-shadow: #e0aaaa;
+
+}
+
+.close {
+  color: #fffbfb;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: rgb(108, 5, 244);
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /*--------------------------------------------------------------
 # Responsive Media Queries
 --------------------------------------------------------------*/
