--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 --------------------------------------------------------------*/
 
 body {
-  background: #fff;
-  color: #ac7194;
+  background: url(../img/gallery/fullmoon.svg);
+  color: #ac719533;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -64,7 +64,7 @@ h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("../img/preloader.svg") no-repeat center center;
+  background: #0b0101 url("../img/preloader.svg") no-repeat center center;
 }
 
 /* Back to top button */
@@ -106,6 +106,7 @@ h6 {
   margin-bottom: 60px;
   position: relative;
   padding-bottom: 20px;
+  color:#f52fa2;
 }
 
 .section-header::before {
@@ -125,6 +126,7 @@ h6 {
   text-align: center;
   font-weight: 700;
   margin-bottom: 10px;
+  color: #f52fa2;
 }
 
 .section-header p {
@@ -133,7 +135,7 @@ h6 {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
-  color: #3c2335;
+  color: #b0f6fb;
 }
 
 .section-with-bg {
@@ -479,7 +481,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background: url(../img/gallery/ai.jpg)  center;
+  background: url(../img/gallery/pplook.png) center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -488,7 +490,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #intro:before {
   content: "";
-  background:linear-gradient(to bottom right, #fd3aa95b, #fbdbf51c, #ff539de8); /* Pink gradient background */;
+  background:radial-gradient( to, #fd3aa805, #2700144c, #ffd9e900); /* Pink gradient background */;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -667,18 +669,27 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #about {
-  background: linear-gradient(to bottom left, #ff5faf, #fbfcfc,#470f2b); /* Pink gradient background */
-  
+  background: url(../img/gallery/pplook.png) center; /* Pink gradient background */
   overflow: hidden;
   position: relative;
   color: #431828;
   padding: 60px 0 40px 0;
   overflow-x: hidden;
+  /* Add the following lines to include the GIF or moving background */
+  
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  animation: yourAnimationName 10s infinite; /* Replace 'yourAnimationName' with the name of your animation */
 }
 
+/* Define your animation */
+@keyframes yourAnimationName {
+  0% { background-position: 0 0; }
+  100% { background-position: 100% 0; }
+}
 #about:before {
   content: "";
-  background:linear-gradient(to bottom left, #ff5cae, #ffffff, #db006d); /* Pink gradient background */
+  background-image: url('img/gallery/clop.gif'); /* Pink gradient background */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -690,7 +701,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #880000;
+  color: #f52fa2;
 }
 
 #about h3 {
@@ -698,13 +709,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 10px;
-  color: #004455;
+  color: #f52fa2;
 }
 
 #about p {
   font-size: 14px;
   margin-bottom: 20px;
-  color: #880000;
+  color:  #b0f6fb;
 }
 
 /*--------------------------------------------------------------
@@ -718,14 +729,160 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Speakers Section
 --------------------------------------------------------------*/
 
-#speakers {
-  padding: 60px 0 30px 0;
-  background: linear-gradient(to bottom left, #ff5faf, #ffffff, #ccffff);
-  position: relative; /* Make the section relative for positioning of polkadots */
-  overflow: hidden; /* Hide overflowing polkadots */
+#speakers{
+  width: 100%;
+  height: 50vh;
+  background: url(../img/gallery/newiov.svg) center;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
   overflow-x: hidden;
+  border: 1px solid rgba(255, 255, 255, 0.5); /* White semi-transparent border */
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* White semi-transparent box shadow */
+  border-radius: auto; /* Add rounded corners */
+  margin:  auto; /* Center the section horizontally */
+  padding: auto; /* Add padding for spacing */
+
+
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  animation: yj 10s infinite; 
 }
 
+@keyframes yj {
+  0% { background-position: 0 0; }
+  100% { background-position: 100% 0; }
+}
+
+#speakers:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.897), rgba(255, 0, 128, 0.977)); /* Black to pink gradient overlay */
+  z-index: 1;
+}
+
+/*..
+speaker page
+....*/
+
+#speakers2 {
+  width: 100%;
+  padding: 50px 0;
+  background-color: rgba(35, 1, 24, 0.644);
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.speaker {
+  margin-bottom: 30px;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+  transition: transform 0.9s ease;
+}
+
+.speaker:hover {
+  transform: translateY(-5px) rotateX(5deg);
+}
+
+.speaker img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  transition: transform 0.9s ease;
+}
+
+.speaker:hover img {
+  transform: translateY(-10px);
+}
+
+.speaker .details {
+  padding: 20px;
+  background-color: rgba(39, 5, 5, 0.514);
+  border-radius: 10px;
+}
+
+.speaker h3 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 24px;
+  color: #b0f6fb;;
+}
+
+.speaker p {
+  margin: 0;
+  font-size: 18px;
+  color: #f52fa2;
+}
+
+.speaker .social {
+  margin-top: 10px;
+}
+
+.speaker .social a {
+  margin-right: 10px;
+  color: #b0f6fb;
+}
+
+
+/* Add animation for scroll parallax effect */
+@keyframes scroll {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-100px); /* Adjust the translateY value for desired parallax effect */
+  }
+}
+
+/* Apply animation to speakers background */
+.speakers-bg {
+  animation: scroll 5s infinite alternate; /* Adjust animation duration and timing as needed */
+}
+
+
+
+/*--------------------------------------------------------------
+# SVG Effect
+--------------------------------------------------------------*/
+.svg-img {
+  position: absolute;
+  top: 50%; /* Start position at the center */
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(0); /* Initial position */
+  z-index: 0; /* Ensure the SVG is behind other content */
+  animation: parallax 17s infinite alternate; /* Apply parallax animation */
+}
+
+/* Parallax animation */
+@keyframes parallax {
+  0% {
+    transform: translate(-50%, -50%) translateY(0);
+  }
+  100% {
+    transform: translate(-50%, -50%) translateY(50px); /* Adjust the amount of parallax effect */
+  }
+}
+/*--------------------------------------------------------------
+# Adding svg effect
+--------------------------------------------------------------*/
+/* Parallax animation */
+@keyframes parallax {
+  0% {
+    transform: translate(-50%, -50%) translateY(0);
+  }
+  100% {
+    transform: translate(-50%, -50%) translateY(100px); /* Adjust the amount of parallax effect */
+  }
+}
+
+/* Apply parallax animation to the SVG */
+.svg-img {
+  animation: parallax 6s infinite alternate; /* Adjust animation duration and timing as needed */
+}
 /* Dot Animation */
 @keyframes dotAnimation1 {
   0% {
@@ -860,13 +1017,65 @@ body.mobile-nav-active #mobile-nav-toggle {
 #speakers .speaker .details .social a:hover {
   color: #48272d; /* Darken social icon color on hover */
 }
+
+
+/*...
+Added animated button
+...*/
+
+
+
+.animated-button {
+  display: inline-block;
+  margin-top: 50px;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color:  #f52fa2;
+  background-color: #1e011395;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: color 0.4s, background-color 0.4s;
+}
+
+.animated-button:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300%;
+  height: 300%;
+  background-color: #35022572;
+  border-radius: 50%;
+  z-index: 0;
+  transition: width 0.4s, height 0.4s, top 0.4s, left 0.4s;
+  transform: translate(-50%, -50%);
+}
+
+.animated-button:hover:before {
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+}
+
+.animated-button:hover {
+  color: #1d071298;
+  background-color: #b0f6fb;
+}
+
 /*------------------------------------------------
 # Schedule Section
 ------------------------------------------------*/
 
 #schedule {
   padding: 60px 0;
-  background: linear-gradient(to bottom,#b9f9ffca, #751947da, #da006d); /* Pinkish fade gradient background */
+  background: linear-gradient(to bottom,#b9f9ff00, #75194700, #da006d00); /* Pinkish fade gradient background */
   position: relative; /* Make the section relative for positioning of polkadots */
   overflow: hidden; /* Hide overflowing polkadots */
   overflow-x: hidden;
@@ -1094,7 +1303,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Gallery Section
 /* Gallery Section */
 #gallery {
-  background: linear-gradient(to bottom, #da006d, #ffb6da, #ffffff00);
+  background: linear-gradient(to bottom, #da006d0a, #ffb6db00, #ffffff00);
   padding: 50px 0; /* Add padding to the top and bottom */
   overflow-x: hidden;
 }
@@ -1497,7 +1706,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top {
-  background:linear-gradient(to bottom right, #1b1618ca, #ff30acaf);
+  background:linear-gradient(to bottom right, #1b16185f, #ff30ac00);
   padding: 60px 0 30px 0;
 }
 
@@ -1655,7 +1864,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background: linear-gradient(to bottom right, #1b1618a2, #ff30ac88);
+  background: linear-gradient(to bottom right, #1b1618a2, #ff30ac00);
 }
 
 .modal-content {
