--- a/css/style.css
+++ b/css/style.css
@@ -730,18 +730,20 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #speakers{
-  width: 100%;
+  width: 50%;
   height: 50vh;
   background: url(../img/gallery/newiov.svg) center;
   background-size: cover;
   overflow: hidden;
   position: relative;
   overflow-x: hidden;
-  border: 1px solid rgba(255, 255, 255, 0.5); /* White semi-transparent border */
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* White semi-transparent box shadow */
+  border: 4px solid rgba(33, 1, 15, 0.555); /* White semi-transparent border */
+  box-shadow: 0 0 10px rgba(75, 1, 33, 0.805); /* White semi-transparent box shadow */
   border-radius: auto; /* Add rounded corners */
-  margin:  auto; /* Center the section horizontally */
+  margin-top:  40px; /* Center the section horizontally */
   padding: auto; /* Add padding for spacing */
+  margin-left: auto;
+  margin-right: auto;
 
 
   background-size: cover; /* Adjust as needed */
@@ -850,9 +852,9 @@ speaker page
 --------------------------------------------------------------*/
 .svg-img {
   position: absolute;
-  top: 50%; /* Start position at the center */
+  top: 0%; /* Start position at the center */
   left: 50%;
-  transform: translate(-50%, -50%) translateY(0); /* Initial position */
+  transform: translate(-10%, -10%) translateY(0); /* Initial position */
   z-index: 0; /* Ensure the SVG is behind other content */
   animation: parallax 17s infinite alternate; /* Apply parallax animation */
 }
@@ -921,7 +923,7 @@ speaker page
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: #ffffff; /* Set dot color to white */
+  background-color: #ffffff00; /* Set dot color to white */
   border-radius: 50%; /* Create a circular dot */
   animation-duration: 5s; /* Set animation duration */
   animation-timing-function: ease-in-out; /* Set animation timing function */
@@ -954,7 +956,7 @@ speaker page
   position: absolute;
   width: 100px;
   height: 100px;
-  background: radial-gradient(circle at 50% 70%, #e8e1e2 10%, transparent 10%);
+  background: radial-gradient(circle at 50% 70%, #e8e1e200 10%, transparent 10%);
   animation: polkadotAnimation 3s ease-in-out infinite alternate;
 }
 
@@ -1027,7 +1029,7 @@ Added animated button
 
 .animated-button {
   display: inline-block;
-  margin-top: 50px;
+  margin-top: 1px;
   padding: 15px 30px;
   font-size: 18px;
   font-weight: bold;
