--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 
 body {
-  background: url(../img/gallery/fullmoon.svg);
+  background: url(../img/gallery/blobgif.svg);
   color: #ac719533;
   font-family: "Open Sans", sans-serif;
 }
@@ -481,7 +481,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background: url(../img/gallery/pplook.png) center;
+  
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -663,6 +663,19 @@ body.mobile-nav-active #mobile-nav-toggle {
     opacity: 0;
   }
 }
+
+
+
+/*--------------------------------------------------------------
+# Recent EventStyle
+--------------------------------------------------------------*/
+
+
+
+
+/*--------------------------------------------------------------
+# End of Recent Event Stle
+--------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
 # About Section
@@ -1866,16 +1879,16 @@ Added animated button
   width: 100%;
   height: 100%;
   overflow: auto;
-  background: linear-gradient(to bottom right, #1b1618a2, #ff30ac00);
+  background: linear-gradient(to bottom right, #3870e9b5, #30ffe09d);
 }
 
 .modal-content {
-  background-color: #d5326ed2;
+  background-color: #1e020cd2;
   margin: 15% auto;
   padding: 20px;
-  border: 5px solid rgba(247, 109, 173, 0.454)4;
+  border: 5px solid rgba(60, 8, 32, 0.454)4;
   width: 80%;
-  box-shadow: #e0aaaa;
+  box-shadow: #3d0018;
 
 }
 
