--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 
 body {
-  background: url(../img/gallery/blobgif.svg);
+  background: url(../img/gallery/fullmoon.svg);
   color: #ac719533;
   font-family: "Open Sans", sans-serif;
 }
