--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 --------------------------------------------------------------*/
 
 body {
-  background: url(../img/gallery/fullmoon.svg);
-  color: #ac719533;
+  background: url(../img/gallery/m1.svg);
+  color: #f52fa2;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -43,7 +43,7 @@ h6 {
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
-  color: #0e1b4d;
+  color: #b0f6fb;
 }
 
 .main-page {
@@ -745,13 +745,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 #speakers{
   width: 50%;
   height: 50vh;
-  background: url(../img/gallery/newiov.svg) center;
+  
   background-size: cover;
   overflow: hidden;
   position: relative;
   overflow-x: hidden;
-  border: 4px solid rgba(33, 1, 15, 0.555); /* White semi-transparent border */
-  box-shadow: 0 0 10px rgba(75, 1, 33, 0.805); /* White semi-transparent box shadow */
+  border: 4px solid rgba(197, 98, 141, 0.555); /* White semi-transparent border */
+  box-shadow: 0 0 10px rgba(94, 135, 162, 0.805); /* White semi-transparent box shadow */
   border-radius: auto; /* Add rounded corners */
   margin-top:  40px; /* Center the section horizontally */
   padding: auto; /* Add padding for spacing */
@@ -787,7 +787,7 @@ speaker page
 #speakers2 {
   width: 100%;
   padding: 50px 0;
-  background-color: rgba(35, 1, 24, 0.644);
+  background-color: rgba(50, 111, 177, 0);
   border-radius: 20px;
   overflow: hidden;
 }
@@ -855,7 +855,7 @@ speaker page
 
 /* Apply animation to speakers background */
 .speakers-bg {
-  animation: scroll 5s infinite alternate; /* Adjust animation duration and timing as needed */
+  animation: scroll 5s scroll; /* Adjust animation duration and timing as needed */
 }
 
 
@@ -869,7 +869,7 @@ speaker page
   left: 50%;
   transform: translate(-10%, -10%) translateY(0); /* Initial position */
   z-index: 0; /* Ensure the SVG is behind other content */
-  animation: parallax 17s infinite alternate; /* Apply parallax animation */
+  animation: parallax 1s infinite bottom; /* Apply parallax animation */
 }
 
 /* Parallax animation */
@@ -894,73 +894,6 @@ speaker page
   }
 }
 
-/* Apply parallax animation to the SVG */
-.svg-img {
-  animation: parallax 6s infinite alternate; /* Adjust animation duration and timing as needed */
-}
-/* Dot Animation */
-@keyframes dotAnimation1 {
-  0% {
-    transform: translateY(-50%) translateX(-50%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(150%) translateX(150%);
-    opacity: 1;
-  }
-}
-
-@keyframes dotAnimation2 {
-  0% {
-    transform: translateY(-50%) translateX(-50%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(200%) translateX(200%);
-    opacity: 1;
-  }
-}
-
-@keyframes dotAnimation3 {
-  0% {
-    transform: translateY(-50%) translateX(-50%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(250%) translateX(250%);
-    opacity: 1;
-  }
-}
-
-.dot {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: #ffffff00; /* Set dot color to white */
-  border-radius: 50%; /* Create a circular dot */
-  animation-duration: 5s; /* Set animation duration */
-  animation-timing-function: ease-in-out; /* Set animation timing function */
-  animation-iteration-count: infinite; /* Make the animation repeat infinitely */
-  opacity: 0; /* Initially hide the dots */
-}
-
-.dot:nth-child(1) {
-  top: 40%;
-  left: 50%;
-  animation-name: dotAnimation1; /* Apply the first dot animation */
-}
-
-.dot:nth-child(2) {
-  top: 50%;
-  left: 50%;
-  animation-name: dotAnimation2; /* Apply the second dot animation */
-}
-
-.dot:nth-child(3) {
-  top: 80%;
-  left: 80%;
-  animation-name: dotAnimation3; /* Apply the third dot animation */
-}
 
 
 #speakers::before,
@@ -1043,6 +976,8 @@ Added animated button
 .animated-button {
   display: inline-block;
   margin-top: 1px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 15px 30px;
   font-size: 18px;
   font-weight: bold;
@@ -1206,7 +1141,7 @@ Added animated button
 }
 
 #schedule .schedule-item:hover {
-  background: linear-gradient(to bottom right, #f98dc3, #ffffff, #abfcfc); /* Pink gradient background */
+  background: linear-gradient(to bottom right, #f98dc300, #ffffff08 rgba(2, 38, 56, 0.66)fc); /* Pink gradient background */
 }
 
 #schedule .schedule-item time {
@@ -1391,6 +1326,8 @@ Added animated button
 #supporters {
   padding: 60px 0;
   overflow-x: hidden;
+  background: linear-gradient(to bottom, #1f3c4a72, #7817563e, #ffffff00);
+
 }
 
 #supporters .supporters-wrap {
@@ -1713,7 +1650,7 @@ Added animated button
 --------------------------------------------------------------*/
 
 #footer {
-  background:#ee189ce2;
+  background:#ee189c00;
   padding: 0 0 25px 0;
   color: #eee;
   font-size: 14px;
@@ -1721,7 +1658,7 @@ Added animated button
 }
 
 #footer .footer-top {
-  background:linear-gradient(to bottom right, #1b16185f, #ff30ac00);
+  background:linear-gradient(to bottom right, #1b16180b, #5a0f3c94);
   padding: 60px 0 30px 0;
 }
 
@@ -1768,7 +1705,7 @@ Added animated button
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #f82249;
+  background: #ff8ac5;
   color: #fff;
 }
 
@@ -1779,7 +1716,7 @@ Added animated button
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
-  border-bottom: 2px solid #f82249;
+  border-bottom: 2px solid #ff8ac5;
 }
 
 #footer .footer-top .footer-links {
@@ -1794,7 +1731,7 @@ Added animated button
 
 #footer .footer-top .footer-links ul i {
   padding-right: 5px;
-  color: #f82249;
+  color: #ff8ac5;
   font-size: 18px;
 }
 
@@ -1812,7 +1749,7 @@ Added animated button
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #f82249;
+  color: #ff8ac5;
 }
 
 #footer .footer-top .footer-contact {
@@ -1834,7 +1771,7 @@ Added animated button
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #f82249;
+  background: #ff8ac5;
   border: 0;
   width: 35%;
   padding: 6px 0;
@@ -1845,7 +1782,7 @@ Added animated button
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"]:hover {
-  background: #e0072f;
+  background: #ff8ac5;
 }
 
 #footer .copyright {
